# DNS-bind9

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: a7d8d46aa8e7_initial_migration.py
hw7/: models.py  my_select.py  seed.py
